--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eject": "react-scripts eject",
     "supabase:start": "npx supabase start",
     "edge:serve": "npx supabase functions serve --no-verify-jwt",
-    "edge:deploy": "npx supabase functions deploy"
+    "edge:deploy": "npx supabase functions deploy",
+    "edge:generate-diary": "ts-node ./scripts/debug/generate-diary.ts"
   },
   "eslintConfig": {
     "extends": [
