--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "supabase:start": "npx supabase start",
-    "edge:serve": "npx supabase functions serve --no-verify-jwt",
+    "edge:serve": "npx supabase functions serve --no-verify-jwt --env-file ./.env",
     "edge:deploy": "npx supabase functions deploy",
     "edge:generate-diary": "ts-node ./scripts/debug/generate-diary.ts"
   },
