feat: フロントエンド側から日記の生成関数を呼ぶように実装した

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 GEMINI_API_KEY=
 REACT_APP_SUPABASE_URL=http://127.0.0.1:54321/
+REACT_APP_SUPABASE_ANON_KEY=
+SUPABASE_AUTH_EXTERNAL_DISCORD_SECRET=
