--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "supabase:reload": "npx supabase stop && npx supabase start",
     "dev-functions": "npx supabase functions serve --env-file .env"
   },
   "eslintConfig": {
