--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "supabase:start": "npx supabase start",
     "supabase:stop": "npx supabase stop",
     "supabase:reload": "npx supabase stop && npx supabase start",
-    "edge:serve": "npx supabase functions serve --env-file .env"
+    "edge:serve": "npx supabase functions serve --no-verify-jwt --env-file .env",
+    "edge:generate-diary": "ts-node scripts/debug/generate-diary.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
