--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_BASE_URL=http://localhost:3000
-REACT_APP_SUPABASE_URL=http://127.0.0.1:54321
+REACT_APP_SUPABASE_URL=http://localhost:54321
 REACT_APP_SUPABASE_ANON_KEY=
 
 GEMINI_API_KEY=
