--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supabase:stop": "npx supabase stop",
     "db:reset": "npx supabase db reset",
     "supabase:reload": "npx supabase stop && npx supabase start",
+    "edge:dev": "npx supabase functions serve --no-verify-jwt --env-file .env",
     "edge:serve": "npx supabase functions serve --env-file .env",
     "edge:generate-diary": "ts-node scripts/debug/generate-diary.ts"
   },
