--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+GENERATE_SOURCEMAP=false
+
 REACT_APP_BASE_URL=http://localhost:3000
 REACT_APP_SUPABASE_URL=http://127.0.0.1:54321
 REACT_APP_SUPABASE_ANON_KEY=
