--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -311,3 +311,14 @@ entrypoint = "./functions/generate-diary/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/generate-diary/*.html" ]
+
+[functions.summerize-weekly-diary]
+enabled = true
+verify_jwt = true
+import_map = "./functions/summerize-weekly-diary/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/summerize-weekly-diary/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/summerize-weekly-diary/*.html" ]
